[tool.poetry]
name = "api-authorizer-rbac"
version = "0.1.0"
description = "API for authorization service with Model RBAC"
authors = ["PHRaulino <phraulino@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
SQLAlchemy = "^1.4.40"
fastapi-jwt-auth = "^0.5.0"
pytz = "^2022.2.1"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
